--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2131,7 +2131,7 @@
     "* has the same order of dimensions as NumPy: first index specifies rows, second columns\n",
     "* is not ambiguous about implicit or explicit indices\n",
     "\n",
-    "Pandas DataFrames have to attributes `loc` and `iloc` that have the above qualities.\n",
+    "Pandas DataFrames have attributes `loc` and `iloc` that have the above qualities.\n",
     "You can use `loc` and `iloc` attributes and forget everything about the previous section. Or you can use these attributes\n",
     "and sometimes use the methods from the previous section as shortcuts if you understand them well.\n",
     "\n",
@@ -3816,6 +3816,226 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (special missing values)</div>\n",
+    "\n",
+    "Write function `special_missing_values` that does the following.\n",
+    "\n",
+    "Read the data set of the top forty singles from the beginning of the year 1964 from `https://www.cs.helsinki.fi/u/jttoivon/dap/data/UK-top40-1964-1-2.tsv`. Return the rows that relate to those singles whose position dropped compared to last week's position (column LW=Last Week).\n",
+    "\n",
+    "To do this you first have to convert the special values `New` and `Re` (Re-entry) to missing values (None).\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## String processing\n",
+    "\n",
+    "If the elements in a column are string, then the vectorized versions of Python's string processing methods are available. These are accessed through the `str` attribute of a Series or a DataFrame. For example, to capitalize all the strings of a Series, we can use the `str.capitalize` method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      Donald\n",
+       "1     Theresa\n",
+       "2      Angela\n",
+       "3    Vladimir\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names = pd.Series([\"donald\", \"theresa\", \"angela\", \"vladimir\"])\n",
+    "names.str.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One can find all the available methods by pressing the tab key after the text `names.str.` in a Python prompt. Try it in below cell!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#names.str."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can split a column or Series into several columns using the `split` method. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      [Donald, Trump]\n",
+       "1       [Theresa, May]\n",
+       "2     [Angela, Merkel]\n",
+       "3    [Vladimir, Putin]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_names = pd.Series([\"Donald Trump\", \"Theresa May\", \"Angela Merkel\", \"Vladimir Putin\"])\n",
+    "full_names.str.split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is not exactly what we wanted: now each element is a list. We need to use the `expand` parameter to split into columns:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Donald</td>\n",
+       "      <td>Trump</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Theresa</td>\n",
+       "      <td>May</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Angela</td>\n",
+       "      <td>Merkel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Vladimir</td>\n",
+       "      <td>Putin</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0       1\n",
+       "0    Donald   Trump\n",
+       "1   Theresa     May\n",
+       "2    Angela  Merkel\n",
+       "3  Vladimir   Putin"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_names.str.split(expand=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (split date)</div>\n",
+    "\n",
+    "Read again the bicycle data set from `https://www.cs.helsinki.fi/u/jttoivon/dap/data/hel/Helsingin_pyorailijamaarat.csv`,\n",
+    "and clean it as in the earlier exercise. Then split the `Päivämäärä` column into a DataFrame with five columns, with column names `Weekday`, `Day`, `Month`, `Year`, and `Hour`. Note that you also need to to do some conversions. To get Hours, drop the colon and minutes. Convert field `Weekday` according the following rule:\n",
+    "```\n",
+    "ma -> Mon\n",
+    "ti -> Tue\n",
+    "ke -> Wed\n",
+    "to -> Thu\n",
+    "pe -> Fri\n",
+    "la -> Sat\n",
+    "su -> Sun\n",
+    "```\n",
+    "Convert the `Month` column according to the following mapping\n",
+    "```\n",
+    "tammi 1\n",
+    "helmi 2\n",
+    "maalis 3\n",
+    "huhti 4\n",
+    "touko 5\n",
+    "kesä 6\n",
+    "heinä 7\n",
+    "elo 8\n",
+    "syys 9\n",
+    "loka 10\n",
+    "marras 11\n",
+    "joulu 12\n",
+    "```\n",
+    "\n",
+    "Create function `split_date` that does the above and returns a DataFrame with five columns.\n",
+    "\n",
+    "So the first element in the `Päivämäärä` column of the original data set should be converted from\n",
+    "`ke 1 tammi 2014 00:00`\n",
+    "to\n",
+    "`Wed 1 1 2014 0`\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Catenating datasets\n",
     "\n",
     "We already saw in the NumPy section how we can catenate arrays along an axis: axis=0 catenates vertically and axis=1 catenates horizontally, and so on. With the DataFrames of Pandas it works similarly except that the row indices and the column names require extra attention. Also note a slight difference in the name: `np.concatenate` but `pd.concat`.\n",
@@ -4725,6 +4945,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (split date continues)</div>\n",
+    "\n",
+    "Write function `split_date_continues` that does\n",
+    "\n",
+    "* read the bicycle data set\n",
+    "* clean the data set of columns/rows that contain only missing values\n",
+    "* drops the `Päivämäärä` column and replaces it with its splitted components as before\n",
+    "\n",
+    "Use the `concat` function to do this. The function should return a DataFrame with 25 columns (first five related to the date and then the rest 20 conserning the measument location.\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Merging dataframes"
    ]
   },
@@ -5409,6 +5646,26 @@
     "libraries_with_books_by = pd.merge(books, collections)\n",
     "libraries_with_books_by"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (cycling weather)</div>\n",
+    "\n",
+    "Merge the cycling and weather data sets along the columns year, month, and day. Note that the names of these columns might be different in the two tables.\n",
+    "\n",
+    "Write function `cycling_weather` that reads the data sets and returns the merged DataFrame.\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -8453,6 +8710,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (cyclists per day)</div>\n",
+    "\n",
+    "Read and clean the bicycle data set as usual. Group the rows by year, month, and day. Get the sum for each group.\n",
+    "\n",
+    "Part 1.\n",
+    "\n",
+    "Make function `cyclists_per_day` that does the above. The function should return a DataFrame (now with the Hour column).\n",
+    "\n",
+    "Part 2.\n",
+    "\n",
+    "In the `main` function, using the function `cyclists_per_day`, get the daily counts, restrict this data to July of year 2017, and plot this data. The x-axis should have ticks from 1 to 31, and there should be a curve to each measuring station.\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Time series"
    ]
   },
@@ -9411,6 +9687,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (bicycle timeseries)</div>\n",
+    "\n",
+    "Write function `bicycle_timeseries` that\n",
+    "\n",
+    "* reads the data set\n",
+    "* cleans it\n",
+    "* turns its `Päivämäärä` column into (row) DatetimeIndex \n",
+    "* returns the new DataFrame\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (commute)</div>\n",
+    "\n",
+    "Write function `commute` that does the following:\n",
+    "\n",
+    "Use the function `bicycle_timeseries` to get the bicycle data. Restrict to August 2017, group by the weekday, and plot the result.\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## External information"
    ]
   },
@@ -9448,7 +9753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
