--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -2224,8 +2224,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <div class=\"alert alert-info\"> Exercise X ()</div>\n",
-    "\n"
+    "#### <div class=\"alert alert-info\"> Exercise X (subsetting by positions)</div>\n",
+    "\n",
+    "Write function `` that does the following.\n",
+    "\n",
+    "Read the data set of the top forty singles from the beginning of the year 1964 from `https://www.cs.helsinki.fi/u/jttoivon/dap/data/UK-top40-1964-1-2.tsv`. Return the top 10 entries and only the columns `Artist` and `Performer`. Get these elements by their positions, that is, by using the `iloc` attribute. The function should return these as a DataFrame.\n",
+    "\n",
+    "<hr/>"
    ]
   },
   {
@@ -3831,6 +3836,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (last week)</div>\n",
+    "\n",
+    "Write function `last_week` that reads the top40 data set mentioned in the above exercise. The function should then try to reconstruct the top40 list of the previous week based on that week's list. Try to do this as well as possible. You can fill the values that are impossible to reconstruct by missing value symbols.\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## String processing\n",
     "\n",
     "If the elements in a column are string, then the vectorized versions of Python's string processing methods are available. These are accessed through the `str` attribute of a Series or a DataFrame. For example, to capitalize all the strings of a Series, we can use the `str.capitalize` method:"
@@ -4030,6 +4046,22 @@
     "to\n",
     "`Wed 1 1 2014 0`\n",
     "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (cleaning data)</div>\n",
+    "\n",
+    "The entries in the following table of US presidents are not uniformly formatted. Make function `cleaning_data` that reads the table from the tsv file `src/presidents` and return the cleaned version of it. Note, you must do the edits programmatically using the string edit methods, not by creating a new DataFrame by hand. The middle three columns should have an integer `dtype`.\n",
+    "\n",
+    "President |\tStart |\tLast |\tSeasons | \tVice-president|\n",
+    "----------|-------|------|----------|------------------|\n",
+    "donald trump|\t2017 Jan|\t-|\t1|\tMike Pence\n",
+    "barack obama|\t2009|\t2017|\t2|\tJoe Biden\n",
+    "bush, george|\t2001|\t2009|\t2|\tCheney, Dick\n",
+    "Clinton, Bill|\t1993|\t2001|\ttwo|\tGore, Al"
    ]
   },
   {
@@ -4773,7 +4805,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have so far assumed that when concatenating vertically the column of both DataFrames are the same, and when joining horizontally the indices are the same. This is, however, not required:"
+    "We have so far assumed that when concatenating vertically the columns of both DataFrames are the same, and when joining horizontally the indices are the same. This is, however, not required:"
    ]
   },
   {
@@ -5661,11 +5693,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (cycling weather)</div>\n",
+    "\n",
+    "Merge the DataFrames UK top40 and the bands DataFrame (`ttps://www.cs.helsinki.fi/u/jttoivon/dap/data/bands.tsv`).\n",
+    "\n",
+    "<hr/>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -8729,6 +8765,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (best record company)</div>\n",
+    "\n",
+    "We use again the UK top 40 data set from the first week of 1964. Here we define \"goodness\" of a record company (`publisher`) based on the sum of the weeks of chart (WoC) of its singles. Return a DataFrame of the singles by the best record company (a subset of rows of the original DataFrame). Do this with function `best_record_company`.\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Time series"
    ]
   },
@@ -9753,7 +9800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
