--- a/basics.ipynb
+++ b/basics.ipynb
@@ -1931,7 +1931,7 @@
     "[2,(4,9),10,(12,14)]\n",
     "```\n",
     "\n",
-    "Note that the second element of the pair does not belong to the range. This is consistent with the way Python's `range` function works.\n",
+    "Note that the second element of the pair does not belong to the range. This is consistent with the way Python's `range` function works. You may assume that no element in the input list appears multiple times.\n",
     "<hr/>"
    ]
   },
@@ -2550,7 +2550,7 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 14 (find matching)</div>\n",
     "\n",
-    "Write function `find_matching` that gets a list of strings and a search string as parameters. The function should return the indices to those elements in the input list that contain the search string.\n",
+    "Write function `find_matching` that gets a list of strings and a search string as parameters. The function should return the indices to those elements in the input list that contain the search string. Use the function `enumerate`.\n",
     "\n",
     "An example:\n",
     "`find_matching([\"sensitive\", \"engine\", \"rubbish\", \"comment\"], \"en\")`\n",
