Added two exercises

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -5696,9 +5696,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <div class=\"alert alert-info\"> Exercise X (cycling weather)</div>\n",
+    "#### <div class=\"alert alert-info\"> Exercise X (top bands)</div>\n",
     "\n",
-    "Merge the DataFrames UK top40 and the bands DataFrame (`ttps://www.cs.helsinki.fi/u/jttoivon/dap/data/bands.tsv`).\n",
+    "Merge the DataFrames UK top40 and the bands DataFrame (`https://www.cs.helsinki.fi/u/jttoivon/dap/data/bands.tsv`).\n",
     "\n",
     "<hr/>"
    ]
@@ -8768,6 +8768,31 @@
     "#### <div class=\"alert alert-info\"> Exercise X (best record company)</div>\n",
     "\n",
     "We use again the UK top 40 data set from the first week of 1964. Here we define \"goodness\" of a record company (`publisher`) based on the sum of the weeks of chart (WoC) of its singles. Return a DataFrame of the singles by the best record company (a subset of rows of the original DataFrame). Do this with function `best_record_company`.\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (suicide fractions)</div>\n",
+    "\n",
+    "Load the suicide data set from https://www.cs.helsinki.fi/u/jttoivon/dap/data/kaggle/who_suicide_statistics.csv . This data was originally downloaded from [Kaggle](https://www.kaggle.com/szamil/who-suicide-statistics). Kaggle contains lots of interesting open data sets.\n",
+    "\n",
+    "Write function `suicide_fractions` that loads the data set and returns a DataFrame that has the country as the (row) index and only one column: the fraction of suicides per population in that country. In more detail, this fraction is the average of yearly suicide fractions. The information about sex and age is not used. Give the sole column the name `Suicide fraction`.\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (suicide weather)</div>\n",
+    "\n",
+    "Copy the function `suicide fractions` from the previous exercise. Also download the dataset of average temperature (over years 1961-1990) in different countries from https://en.wikipedia.org/wiki/List_of_countries_by_average_yearly_temperature .\n",
+    "You can use the function `pd.read_html` to get all the tables from a html page. Maku sure you use the country as the (row) index for both of the DataFrames. What is the spearman correlation between these variables?\n",
     "\n",
     "<hr/>"
    ]
