--- a/basics.ipynb
+++ b/basics.ipynb
@@ -40,19 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello world!\n"
+      "Hello world2!\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello world!\")"
+    "print(\"Hello world2!\")"
    ]
   },
   {
