Fine tuned exercises

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -4067,12 +4067,12 @@
     "joulu 12\n",
     "```\n",
     "\n",
-    "Create function `split_date` that does the above and returns a DataFrame with five columns.\n",
+    "Create function `split_date` that does the above and returns a DataFrame with five columns. You may want to use the `map` method of Series objects.\n",
     "\n",
     "So the first element in the `Päivämäärä` column of the original data set should be converted from\n",
     "`ke 1 tammi 2014 00:00`\n",
     "to\n",
-    "`Wed 1 1 2014 0`\n",
+    "`Wed 1 1 2014 0` . Test your solution from the `main` function.\n",
     "<hr/>"
    ]
   },
@@ -4082,14 +4082,14 @@
    "source": [
     "#### <div class=\"alert alert-info\"> Exercise X (cleaning data)</div>\n",
     "\n",
-    "The entries in the following table of US presidents are not uniformly formatted. Make function `cleaning_data` that reads the table from the tsv file `src/presidents` and return the cleaned version of it. Note, you must do the edits programmatically using the string edit methods, not by creating a new DataFrame by hand. The middle three columns should have an integer `dtype`.\n",
+    "The entries in the following table of US presidents are not uniformly formatted. Make function `cleaning_data` that reads the table from the tsv file `src/presidents` and return the cleaned version of it. Note, you must do the edits programmatically using the string edit methods, not by creating a new DataFrame by hand. The middle three columns should have an integer `dtype`. The `where` method of DataFrames can be helpful, likewise the [string methods](http://pandas.pydata.org/pandas-docs/stable/api.html#string-handling) of Series objects. You get an additional point, if you manage to get the columns President and Vice-president right!\n",
     "\n",
     "President |\tStart |\tLast |\tSeasons | \tVice-president|\n",
     "----------|-------|------|----------|------------------|\n",
-    "donald trump|\t2017 Jan|\t-|\t1|\tMike Pence\n",
-    "barack obama|\t2009|\t2017|\t2|\tJoe Biden\n",
-    "bush, george|\t2001|\t2009|\t2|\tCheney, Dick\n",
-    "Clinton, Bill|\t1993|\t2001|\ttwo|\tGore, Al"
+    "donald trump|\t2017 Jan|\t-|\t1|\tMike pence\n",
+    "barack obama|\t2009|\t2017|\t2|\tjoe Biden\n",
+    "bush, george|\t2001|\t2009|\t2|\tCheney, dick\n",
+    "Clinton, Bill|\t1993|\t2001|\ttwo|\tgore, Al"
    ]
   },
   {
@@ -5713,9 +5713,9 @@
    "source": [
     "#### <div class=\"alert alert-info\"> Exercise X (cycling weather)</div>\n",
     "\n",
-    "Merge the cycling and weather data sets along the columns year, month, and day. Note that the names of these columns might be different in the two tables.\n",
+    "Merge the cycling and weather data sets along the columns year, month, and day. Note that the names of these columns might be different in the two tables. Then drop useless columns 'm', 'd', 'Time', and 'Time zone'.\n",
     "\n",
-    "Write function `cycling_weather` that reads the data sets and returns the merged DataFrame.\n",
+    "Write function `cycling_weather` that reads the data sets and returns the resulting DataFrame.\n",
     "\n",
     "<hr/>"
    ]
@@ -8776,15 +8776,15 @@
    "source": [
     "#### <div class=\"alert alert-info\"> Exercise X (cyclists per day)</div>\n",
     "\n",
-    "Read and clean the bicycle data set as usual. Group the rows by year, month, and day. Get the sum for each group.\n",
+    "Read, clean and parse the bicycle data set as usual. Group the rows by year, month, and day. Get the sum for each group.\n",
     "\n",
     "Part 1.\n",
     "\n",
-    "Make function `cyclists_per_day` that does the above. The function should return a DataFrame (now with the Hour column).\n",
+    "Make function `cyclists_per_day` that does the above. The function should return a DataFrame.\n",
     "\n",
     "Part 2.\n",
     "\n",
-    "In the `main` function, using the function `cyclists_per_day`, get the daily counts, restrict this data to July of year 2017, and plot this data. The x-axis should have ticks from 1 to 31, and there should be a curve to each measuring station.\n",
+    "In the `main` function, using the function `cyclists_per_day`, get the daily counts. Drop the columns Hour and Weekday. The index of the DataFrame now consists of tuples (Year, Month, Day). Then restrict this data to August of year 2017, and plot this data. Don't forget to call the `plt.show` function of matplotlib. The x-axis should have ticks from 1 to 31, and there should be a curve to each measuring station. Can you spot the weekends?\n",
     "\n",
     "<hr/>"
    ]
@@ -8795,7 +8795,7 @@
    "source": [
     "#### <div class=\"alert alert-info\"> Exercise X (best record company)</div>\n",
     "\n",
-    "We use again the UK top 40 data set from the first week of 1964. Here we define \"goodness\" of a record company (`publisher`) based on the sum of the weeks of chart (WoC) of its singles. Return a DataFrame of the singles by the best record company (a subset of rows of the original DataFrame). Do this with function `best_record_company`.\n",
+    "We use again the UK top 40 data set from the first week of 1964 (https://www.cs.helsinki.fi/u/jttoivon/dap/data/UK-top40-1964-1-2.tsv ). Here we define \"goodness\" of a record company (`Publisher`) based on the sum of the weeks of chart (WoC) of its singles. Return a DataFrame of the singles by the best record company (a subset of rows of the original DataFrame). Do this with function `best_record_company`.\n",
     "\n",
     "<hr/>"
    ]
@@ -8808,7 +8808,7 @@
     "\n",
     "Load the suicide data set from https://www.cs.helsinki.fi/u/jttoivon/dap/data/kaggle/who_suicide_statistics.csv . This data was originally downloaded from [Kaggle](https://www.kaggle.com/szamil/who-suicide-statistics). Kaggle contains lots of interesting open data sets.\n",
     "\n",
-    "Write function `suicide_fractions` that loads the data set and returns a DataFrame that has the country as the (row) index and only one column: the fraction of suicides per population in that country. In more detail, this fraction is the average of yearly suicide fractions. The information about sex and age is not used. Give the sole column the name `Suicide fraction`.\n",
+    "Write function `suicide_fractions` that loads the data set and returns a Series that has the country as the (row) index and as the column the fraction of suicides per population in that country. In more detail, this fraction is the average of suicide fractions. The information about year, sex and age is not used.\n",
     "\n",
     "<hr/>"
    ]
@@ -8820,7 +8820,17 @@
     "#### <div class=\"alert alert-info\"> Exercise X (suicide weather)</div>\n",
     "\n",
     "Copy the function `suicide fractions` from the previous exercise. Also download the dataset of average temperature (over years 1961-1990) in different countries from https://en.wikipedia.org/wiki/List_of_countries_by_average_yearly_temperature .\n",
-    "You can use the function `pd.read_html` to get all the tables from a html page. By default `pd.read_html` does not know which row contain column header and which column contains row headers. Maku sure you use the country as the (row) index for both of the DataFrames. What is the spearman correlation between these variables?\n",
+    "You can use the function `pd.read_html` to get all the tables from a html page. By default `pd.read_html` does not know which row contain column header and which column contains row headers. Maku sure you use the country as the (row) index for both of the DataFrames. What is the [Spearman correlation](https://en.wikipedia.org/wiki/Spearman%27s_rank_correlation_coefficient) between these variables? Use the `corr` method of Series object. Note the the two Series need not be sorted as the indices of the rows (country names) are used to align them.\n",
+    "\n",
+    "The return value of the function is a tuple (suicide_rows, temperature_rows, common_rows, spearman_correlation)\n",
+    "The output from the `main` function should be of the following form:\n",
+    "\n",
+    "```\n",
+    "Suicide DataFrame has x rows\n",
+    "Temperature DataFrame has x rows\n",
+    "Common DataFrame has x rows\n",
+    "Spearman correlation: x.x\n",
+    "```\n",
     "\n",
     "You might have trouble when trying to convert the temperatures to float. The is because the negative numbers on that html page use a special *unicode minus sign*, which looks typographically nice, but the float constructor cannot interpret it as a minus sign. You can try out the following example:"
    ]
@@ -9880,9 +9890,11 @@
    "source": [
     "#### <div class=\"alert alert-info\"> Exercise X (commute)</div>\n",
     "\n",
-    "Write function `commute` that does the following:\n",
+    "In function `commute` do the following:\n",
     "\n",
-    "Use the function `bicycle_timeseries` to get the bicycle data. Restrict to August 2017, group by the weekday, and plot the result.\n",
+    "Use the function `bicycle_timeseries` to get the bicycle data. Restrict to August 2017, group by the weekday, aggregate by summing. Set the index to `['Mon', 'Tue', 'Wed', 'Thu', 'Fr', 'Sat', 'Sun']`. Return the resulting DataFrame from the function.\n",
+    "\n",
+    "In the `main` function plot the DataFrame. Xticklabels should be the weekdays. Don't forget to call `show` function!\n",
     "\n",
     "<hr/>"
    ]
@@ -9928,7 +9940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
