Finalized numpy part1.
Cleaned up, added exercise numbering.

Added two images.

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -2121,7 +2121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If a key is not found in a dictionary, the indexing `d[key]` results in an error (*exception* `KeyError`). But an assignment with non-existing key causes the key to be added in the dictionary associated with the corresponding value:"
+    "If a key is not found in a dictionary, the indexing `d[key]` results in an error (*exception* `KeyError`). But an assignment with a non-existing key causes the key to be added in the dictionary associated with the corresponding value:"
    ]
   },
   {
@@ -2159,7 +2159,6 @@
     "Dictionary object contains several non-mutating methods:\n",
     "```\n",
     "d.copy()\n",
-    "d.has key(k)\n",
     "d.items()\n",
     "d.keys()\n",
     "d.values()\n",
