html for week2 looks nice now

--- a/numpy2.ipynb
+++ b/numpy2.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Numpy (continues)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Comparisons and masking\n",
     "\n",
     "Just like NumPy allows element-wise arithmetic operations between arrays, for example addition of two arrays, it is possible to compare two arrays element-wise. For example"
