Added summary to week2

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -945,13 +945,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### a list as an index returns a 2d array, single index a 1d array"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### <div class=\"alert alert-info\"> Exercise 11 (rows and columns)</div>\n",
     "\n",
     "Write two functions, `get_rows` and `get_columns`, that get a two dimensional array as parameter.\n",
@@ -1867,6 +1860,31 @@
     " [0 3 6 9]]\n",
     "```\n",
     "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "* We have learned how regular expressions can be used to specify regular sets of strings\n",
+    "  * we know how to find out if a string matches a regular expression\n",
+    "  * we know how to extract pieces of text that match a RE\n",
+    "  * we can replace matches to a RE with another string\n",
+    "* We can read (and write) a text file either line by line or whole file at the same time\n",
+    "* We also know how to specify the encoding of the file. The utf-8 encoding is a very common and can represent nearly every character or symbol of any (natural) language\n",
+    "* Program's parameters are in the array `sys.argv`, and we can return a value from the program with the function `sys.exit`\n",
+    "* The file streams `sys.stdin`, `sys.stdout`, and `sys.stderr` allow basic textual input and output to and from the program\n",
+    "* Every value in Python is an object\n",
+    "  * Classes are user defined data types, they tell how to construct instances (objects) of that type\n",
+    "  * Relationship between objects and classes: `isinstance`\n",
+    "  * Relationship between classes: `issubclass`\n",
+    "* Exceptions signal exceptional situations, not necessarily errors\n",
+    "  * We know how catch and raise exceptions\n",
+    "* The efficiency of NumPy is based on the fact that the same operations can be performed on elements fast, if\n",
+    "all the elements have the same type. These are called vectorized operations\n",
+    "* We know how to create, reshape, perform basic access, combine, split, and aggregate arrays"
    ]
   },
   {
